--- a/_posts/2000-01-02-Content.md
+++ b/_posts/2000-01-02-Content.md
@@ -39,15 +39,11 @@ Check out [the Field Agent website](https://app.fieldagent.net/?__hssc=&__hstc=&
 ## Apps That Give You Money: Foap
 [Foap](https://www.foap.com/){: rel="nofollow"} is like Fiverr for amateur photographers. 
 
-Instead of posting pictures of your cat and your dinner on Instagram, you can upload them to Foap with the hope that someone out there is in need of some simple stock photography. If your photograph is picked up, you’ll earn $5 from whoever decides to use it. There’s also a chance that you’ll earn even more reward money if your image is voted highly by other users.
+If you have a camera roll with over 10,000 photos on it that you've never posted online, this app is for you. You can upload those high quality that have never seen the light of day to Foap and maybe get paid for them! The idea of foap is that content creators are looking for cheaper alternatives to stock photography, at the same time that mobile phone cameras are getting better and better. If your photos sell, you'll get a percentage of the payout. Additionally you can earn extra rewards for highly rated images. 
 
 It’s no secret that the Internet is full of “fauxtographers,” so if you’re even halfway decent at capturing beautiful images, you have a pretty good chance of standing out on Foap. Many major companies rely on Foap for images to be used in their catalogs and websites. If your photography skills go beyond the “everyday” photographer’s, you might end up making a connection that could lead to a much better-paying gig. 
 
-Like Fiverr, though, if you are good at what you do, you won’t want to waste too much time using Foap after building up a decent portfolio. Amateur photographers are a dime a dozen - but good ones are worth much more.
-
-Speaking of wasting time, Foap’s upload process is fairly clunky and time-consuming. Even if you have a batch of photographs you wish to upload, you need to load each one individually - naming and tagging it before you move on to the next one. If you’re doing this as a hobby and to make a few extra bucks, you might not mind this. Otherwise, make the connections you need to make and move on.
-
-## Apps That Give You Money: Foap
+## Apps That Give You Money: Ibotta
 [Ibotta](https://ibotta.com/){: rel="nofollow"} is a service that, quite frankly, should be used by everyone.
 
 We all buy groceries, and we all wish we didn’t have to spend so much on them. Ibotta provides rebates for specific grocery-related items bought at either supermarkets or retail stores, given that you kept the receipt. 
