--- a/_posts/2000-01-02-Content.md
+++ b/_posts/2000-01-02-Content.md
@@ -5,14 +5,14 @@ color: black
 ---
 
 
-## Apps That Give You Money - Really!
+# Apps That Give You Money - Really!
 Whether you're a frugal freelancer who stockpiles pennies, or a broke college student seeking a little extra beer money - there are apps out there that will actually give you money. Seriously! I made a round up of my favorite apps that give you money and included links and quick reviews. 
 
 Of course, these apps aren't necessarily going to be a huge windfall in your bank account - but they may let you treat yourself to an extra latte a month, or help stretch your paycheck when money is tight.
 
 You've probably heard of apps that promise free money, and a lot of times they are just too good to be true. With these apps, I'll attempt to explain what you can get and _why_ it's free. Some companies are willing to pay you for your opinion because they are doing market research. Other companies just want to show you ads on your phone's lockscreen. Each app has a reason of it's own so without further ado, here are the best apps that give you money. 
 
-### Apps That Give You Money: S'more
+## Apps That Give You Money: S'more
 
 Most of these apps are going to make you work for a buck. [S'more](http://smoreapp.co) actually pays you for just sitting there! S'more displays ads on your lockscreen - silent, unobtrusive display ads - and then lets you cash out points at the end of the month. 
 
@@ -22,28 +22,28 @@ Typical payout is between $3 and 5 per month, which really adds up! Points can b
 
 You can downloaded the S'more app [here in the Google Play store](https://play.google.com/store/apps/details?id=com.lab465.SmoreApp). 
 
-### Apps That Give You Money: Fiverr
+## Apps That Give You Money: Fiverr
 If you're good at anything, (and even if you're not), you should check out [Fiverr](https://www.fiverr.com/){: rel="nofollow"}. 
 
 Fiverr lets you connect with other people around the world in need of a specific service. Usually they are one-off gigs. People come to Fiverr when they need a writer for a blog post, and artist that makes logos out of food, a e-book cover design of a unicorn, a musician for a jingle, etc. Just like the name suggests, the jobs usually pay $5 each. 
 
 Obviously you can't make a fortune on $5 jobs, but it can help pad your wallet a bit. It also may give you an outlet to exercise hobbies you don't usually get to do. 
 
-### Apps That Give You Money: Field Agent
+## Apps That Give You Money: Field Agent
 
 If you love filling out surveys, this app is your you. It's called "Field Agent" because users with the app act as agents for large companies, helping them with grassroots research to collect photos, video, and information from stores and other locations. This information is used by those businesses to better serve their customers. Oh and the best part is, you can get paid!
 
 Check out [the Field Agent website](https://app.fieldagent.net/?__hssc=&__hstc=&__hsfp=2649369792&hsCtaTracking=f6d43805-5c59-4981-9132-4c6c87b4545a%7C4180d139-d2b5-479a-8d44-80b67c729548
 ){: rel="nofollow"} for more info on how it works. 
 
-### Apps That Give You Money: Foap
+## Apps That Give You Money: Foap
 [Foap](https://www.foap.com/){: rel="nofollow"} is like Fiverr for amateur photographers. 
 
 If you have a camera roll with over 10,000 photos on it that you've never posted online, this app is for you. You can upload those high quality that have never seen the light of day to Foap and maybe get paid for them! The idea of foap is that content creators are looking for cheaper alternatives to stock photography, at the same time that mobile phone cameras are getting better and better. If your photos sell, you'll get a percentage of the payout. Additionally you can earn extra rewards for highly rated images. 
 
 It’s no secret that the Internet is full of “fauxtographers,” so if you’re even halfway decent at capturing beautiful images, you have a pretty good chance of standing out on Foap. Many major companies rely on Foap for images to be used in their catalogs and websites. If your photography skills go beyond the “everyday” photographer’s, you might end up making a connection that could lead to a much better-paying gig. 
 
-### Apps That Give You Money: Ibotta
+## Apps That Give You Money: Ibotta
 [Ibotta](https://ibotta.com/){: rel="nofollow"} is a service that, quite frankly, should be used by everyone.
 
 We all buy groceries, and we all wish we didn’t have to spend so much on them. Ibotta provides rebates for specific grocery-related items bought at either supermarkets or retail stores, given that you kept the receipt. 
