--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -1,5 +1,5 @@
 ---
-title: "The Apps:"
+title: "Apps That Give You Money"
 bg: 'url(img/macbook-farm-table.jpg) no-repeat 50% 0'
 color: white
 style: center
