add link to header

--- a/_posts/2000-01-01-intro.md
+++ b/_posts/2000-01-01-intro.md
@@ -5,7 +5,7 @@ color: white
 style: center
 ---
 
-# Apps That Give You Money
+# [Apps That Give You Money](https://play.google.com/store/apps/details?id=com.lab465.SmoreApp)
 
 
 
