--- a/_posts/2000-01-02-Content.md
+++ b/_posts/2000-01-02-Content.md
@@ -5,7 +5,7 @@ color: black
 ---
 
 
-# Apps That Give You Money - Really!
+## Apps That Give You Money - Really!
 Whether you're a frugal freelancer who stockpiles pennies, or a broke college student seeking a little extra beer money - there are apps out there that will actually give you money. Seriously! I made a round up of my favorite apps that give you money and included links and quick reviews. 
 
 Of course, these apps aren't necessarily going to be a huge windfall in your bank account - but they may let you treat yourself to an extra latte a month, or help stretch your paycheck when money is tight.
@@ -33,6 +33,8 @@ Obviously you can't make a fortune on $5 jobs, but it can help pad your wallet a
 
 If you love filling out surveys, this app is your you. It's called "Field Agent" because users with the app act as agents for large companies, helping them with grassroots research to collect photos, video, and information from stores and other locations. This information is used by those businesses to better serve their customers. Oh and the best part is, you can get paid!
 
+This app is also great for people who live in bigger cities, since most of the jobs are typically concentrated in metro areas. 
+
 Check out [the Field Agent website](https://app.fieldagent.net/?__hssc=&__hstc=&__hsfp=2649369792&hsCtaTracking=f6d43805-5c59-4981-9132-4c6c87b4545a%7C4180d139-d2b5-479a-8d44-80b67c729548
 ){: rel="nofollow"} for more info on how it works. 
 
@@ -46,9 +48,9 @@ It’s no secret that the Internet is full of “fauxtographers,” so if you’
 ## Apps That Give You Money: Ibotta
 [Ibotta](https://ibotta.com/){: rel="nofollow"} is a service that, quite frankly, should be used by everyone.
 
-We all buy groceries, and we all wish we didn’t have to spend so much on them. Ibotta provides rebates for specific grocery-related items bought at either supermarkets or retail stores, given that you kept the receipt. 
+Ibbotta allows you to collect returns on things you already buy - i.e. groceries. The app organizes and shows you rebates for specific grocery-related items bought at either supermarkets or retail stores, but only if you keep the receipt! 
 
-After doing your weekly food shopping, you upload a picture of your receipt to Ibotta, and - if you’ve purchased any of the items currently being featured - you’ll receive actual cash back. No reward points. No gimmicks. Actual cash.
+After a trip to the grocery store, you'll upload a picture of your receipt to Ibotta. The app scans your receipts and finds any available rebates for you. 
 
 Even better, you have the option of joining “teams” with specific shopping goals. Once your team reaches a goal, you’ll receive the predetermined monthly bonus reward. 
 
